--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ thiserror = "2.0.12"
 tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
 tower = { version = "0.5.2", features = ["util"] }
 tower-http = { version = "0.6.4", features = ["fs"] }
+url = "*"
 wasm-bindgen = "=0.2.100"
 web-sys = "0.3.77"
 
