--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -22,6 +22,7 @@ log.workspace = true
 serde.workspace = true
 sqlx = { workspace = true, optional = true }
 tokio = { workspace = true, optional = true }
+url = { workspace = true, optional = true }
 
 http = "1.3.1"
 infer = { version = "0.19.0", optional = true }
@@ -53,5 +54,6 @@ ssr = [
     "dep:leptos_axum",
     "dep:sqlx",
     "dep:tokio",
+    "dep:url",
 ]
 
