--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,7 @@ lib-package = "frontend"
 
 # The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
 site-root = "target/site"
+hash-files = true
 
 # The site-root relative folder where all compiled output (JS, WASM and CSS) is written
 # Defaults to pkg
