Add throttling for comment loading, need to add it to all infinite scrolls. Consider adding empty space at bottom of scrolls to avoid height change when showing loading icon and triggering loading before reaching the end of the scroll. Only make sessions secure in Prod mode to enable local testing on smartphones

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ leptos_router = { version = "0.8.2", features = ["nightly"] }
 leptos_axum = { version = "0.8.2" }
 server_fn = { version = "0.8.2", features = ["multipart"] }
 
-leptos-use = { version = "0.16.0-beta2", features = ["use_breakpoints", "use_clipboard"] }
+leptos-use = { version = "0.16.2", features = ["use_breakpoints", "use_clipboard", "signal_debounced", "signal_throttled"] }
 
 anyhow = "*"
 axum = {  version = "0.8.4", features = [ "macros" ] }
