--- a/lib/app/Cargo.toml
+++ b/lib/app/Cargo.toml
@@ -17,6 +17,7 @@ leptos.workspace = true
 leptos_meta.workspace = true
 leptos_router.workspace = true
 
+leptos-use.workspace = true
 log.workspace = true
 
 [features]
