--- a/lib/components/Cargo.toml
+++ b/lib/components/Cargo.toml
@@ -14,6 +14,8 @@ leptos.workspace = true
 leptos_meta.workspace = true
 leptos_router.workspace = true
 
+leptos-use.workspace = true
+
 serde.workspace = true
 strum.workspace = true
 strum_macros.workspace = true
