--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -25,8 +25,10 @@ tokio = { workspace = true, optional = true }
 url = { workspace = true, optional = true }
 
 http = "1.3.1"
+image = { version = "0.25.6", optional = true }
 infer = { version = "0.19.0", optional = true }
 object_store = {  version = "0.12.1", features = ["aws"], optional = true }
+webp = { version = "0.3.0", optional = true }
 
 [dev-dependencies]
 bytes = "1.10.1"
@@ -50,11 +52,13 @@ ssr = [
     "leptos-use/ssr",
     "sharesphere_utils/ssr",
     "sharesphere_auth/ssr",
+    "dep:image",
     "dep:infer",
     "dep:object_store",
     "dep:leptos_axum",
     "dep:sqlx",
     "dep:tokio",
     "dep:url",
+    "dep:webp",
 ]
 
