--- a/lib/utils/Cargo.toml
+++ b/lib/utils/Cargo.toml
@@ -30,17 +30,17 @@ web-sys.workspace = true
 
 async-trait = { version = "*", optional = true }
 
-ammonia = "4"
-const_format = "0.2.33"
+ammonia = "4.1.1"
+const_format = "0.2.34"
 gloo-net = { version = "0.6.0", features = ["http"] }
 lazy_static = "1.5.0"
-markdown = { version = "1.0.0-alpha.20", optional = true }
+markdown = { version = "1.0.0", optional = true }
 mime_guess = "2.0.5"
-quick-xml = { version = "0.37.1", optional = true }
+quick-xml = { version = "0.38.0", optional = true }
 send_wrapper = { version = "0.6.0", features = ["futures"] }
 
 [dev-dependencies]
-indoc = "2.0.5"
+indoc = "2.0.6"
 
 [features]
 default = []
