--- a/lib/utils/Cargo.toml
+++ b/lib/utils/Cargo.toml
@@ -41,6 +41,7 @@ send_wrapper = { version = "0.6.0", features = ["futures"] }
 
 [dev-dependencies]
 indoc = "2.0.6"
+sealed_test = "1.1.0"
 
 [features]
 default = []
