--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
 tower = { version = "0.5.2", features = ["util"] }
 tower-http = { version = "0.6.6", features = ["fs"] }
 url = "*"
+validator = { version = "0.20.0", features = ["derive"] }
 wasm-bindgen = "=0.2.100"
 web-sys = "0.3.77"
 
