--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -23,6 +23,7 @@ serde.workspace = true
 sqlx = { workspace = true, optional = true }
 tokio = { workspace = true, optional = true }
 url = { workspace = true, optional = true }
+validator.workspace = true
 
 http = "1.3.1"
 image = { version = "0.25.6", optional = true }
