--- a/lib/utils/Cargo.toml
+++ b/lib/utils/Cargo.toml
@@ -11,6 +11,7 @@ leptos_meta.workspace = true
 leptos_router.workspace = true
 leptos_axum = { workspace = true, optional = true }
 
+leptos-fluent.workspace = true
 leptos-use.workspace = true
 
 chrono.workspace = true
@@ -46,11 +47,16 @@ sealed_test = "1.1.0"
 
 [features]
 default = []
-hydrate = ["leptos/hydrate"]
+hydrate = [
+    "leptos/hydrate",
+    "leptos-fluent/hydrate",
+]
 ssr = [
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
+    "leptos-fluent/ssr",
+    "leptos-fluent/axum",
     "leptos-use/ssr",
     "dep:async-trait",
     "dep:markdown",
