--- a/lib/app/Cargo.toml
+++ b/lib/app/Cargo.toml
@@ -17,6 +17,8 @@ leptos.workspace = true
 leptos_meta.workspace = true
 leptos_router.workspace = true
 
+axum = { workspace = true, optional = true}
+leptos-fluent.workspace = true
 leptos-use.workspace = true
 log.workspace = true
 
@@ -24,6 +26,7 @@ log.workspace = true
 default = []
 hydrate = [
     "leptos/hydrate",
+    "leptos-fluent/hydrate",
     "sharesphere_utils/hydrate",
     "sharesphere_auth/hydrate",
     "sharesphere_core/hydrate",
@@ -32,9 +35,12 @@ hydrate = [
     "sharesphere_components/hydrate",
 ]
 ssr = [
+    "dep:axum",
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
+    "leptos-fluent/ssr",
+    "leptos-fluent/axum",
     "sharesphere_utils/ssr",
     "sharesphere_auth/ssr",
     "sharesphere_core/ssr",
