--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -15,6 +15,7 @@ leptos_router.workspace = true
 leptos_axum = { workspace = true, optional = true }
 server_fn.workspace = true
 
+leptos-fluent.workspace = true
 leptos-use.workspace = true
 
 chrono.workspace = true
@@ -43,6 +44,7 @@ sealed_test = "1.1.0"
 default = []
 hydrate = [
     "leptos/hydrate",
+    "leptos-fluent/hydrate",
     "sharesphere_utils/hydrate",
     "sharesphere_auth/hydrate",
 ]
@@ -50,6 +52,8 @@ ssr = [
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
+    "leptos-fluent/ssr",
+    "leptos-fluent/axum",
     "leptos-use/ssr",
     "sharesphere_utils/ssr",
     "sharesphere_auth/ssr",
