--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ leptos_router = { version = "0.8.6", features = ["nightly"] }
 leptos_axum = { version = "0.8.6" }
 server_fn = { version = "0.8.6", features = ["multipart"] }
 
-leptos-fluent = "0.2.18"
+leptos-fluent = { version = "0.2.18", features = ["json"] }
 leptos-use = { version = "0.16.2", features = ["use_breakpoints", "use_clipboard", "signal_debounced", "signal_throttled"] }
 
 anyhow = "*"
