--- a/lib/auth/Cargo.toml
+++ b/lib/auth/Cargo.toml
@@ -13,6 +13,8 @@ leptos_meta.workspace = true
 leptos_router.workspace = true
 leptos_axum = { workspace = true, optional = true }
 
+leptos-fluent.workspace = true
+
 anyhow = { workspace = true, optional = true }
 axum_session = { workspace = true, optional = true }
 axum_session_auth = { workspace = true, optional = true }
@@ -36,12 +38,15 @@ async-trait = { version = "*", optional = true }
 default = []
 hydrate = [
     "leptos/hydrate",
+    "leptos-fluent/hydrate",
     "sharesphere_utils/hydrate"
 ]
 ssr = [
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
+    "leptos-fluent/axum",
+    "leptos-fluent/ssr",
     "sharesphere_utils/ssr",
     "dep:anyhow",
     "dep:async-trait",
