--- a/lib/components/Cargo.toml
+++ b/lib/components/Cargo.toml
@@ -14,6 +14,7 @@ leptos.workspace = true
 leptos_meta.workspace = true
 leptos_router.workspace = true
 
+leptos-fluent.workspace = true
 leptos-use.workspace = true
 
 serde.workspace = true
@@ -24,6 +25,7 @@ strum_macros.workspace = true
 default = []
 hydrate = [
     "leptos/hydrate",
+    "leptos-fluent/hydrate",
     "sharesphere_utils/hydrate",
     "sharesphere_auth/hydrate",
     "sharesphere_core/hydrate",
@@ -32,6 +34,8 @@ ssr = [
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
+    "leptos-fluent/axum",
+    "leptos-fluent/ssr",
     "sharesphere_utils/ssr",
     "sharesphere_auth/ssr",
     "sharesphere_core/ssr",
