--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -22,6 +22,8 @@ chrono.workspace = true
 log.workspace = true
 serde.workspace = true
 sqlx = { workspace = true, optional = true }
+strum.workspace = true
+strum_macros.workspace = true
 tokio = { workspace = true, optional = true }
 url = { workspace = true, optional = true }
 validator.workspace = true
