--- a/lib/app/Cargo.toml
+++ b/lib/app/Cargo.toml
@@ -2,6 +2,7 @@
 name = "sharesphere_app"
 version = "0.1.0"
 edition = "2024"
+description = "Root of the ShareSphere app"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
