--- a/lib/utils/Cargo.toml
+++ b/lib/utils/Cargo.toml
@@ -2,8 +2,7 @@
 name = "sharesphere_utils"
 version = "0.1.0"
 edition = "2024"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Utility functions and components"
 
 [dependencies]
 leptos.workspace = true
