Fix 404 response by adding i18n context and stylesheet

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,6 +11,7 @@ sharesphere_auth = { path = "../lib/auth", default-features = false, features = 
 sharesphere_core = { path = "../lib/core", default-features = false, features = ["ssr"] }
 sharesphere_app = { path = "../lib/app", default-features = false, features = ["ssr"] }
 leptos = { workspace = true, features = [ "ssr" ]}
+leptos_meta = { workspace = true, features = [ "ssr" ] }
 leptos_axum.workspace = true
 
 axum.workspace = true
