Add unsafe-eval in script_src for iOS devices

--- a/lib/app/Cargo.toml
+++ b/lib/app/Cargo.toml
@@ -22,6 +22,7 @@ axum = { workspace = true, optional = true}
 leptos-fluent.workspace = true
 leptos-use.workspace = true
 log.workspace = true
+regex = "1.12.2"
 
 [features]
 default = []
