--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -26,5 +26,7 @@ tower.workspace = true
 tower-http.workspace = true
 
 base64 = "0.22.1"
+backoff = { version = "0.4.0", features = ["tokio"] }
+tokio-cron-scheduler = "0.15.1"
 tracing-subscriber = "0.3.19"
 tracing = "0.1.41"
