--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -38,10 +38,12 @@ webp = { version = "0.3.1", optional = true }
 [dev-dependencies]
 bytes = "1.10.1"
 float-cmp = "0.10.0"
+fluent-templates = "0.13.1"
 futures-util = "0.3.31"
 multer = "3.1.0"
 rand = "0.9.2"
 sealed_test = "1.1.0"
+unic-langid = "0.9.6"
 
 [features]
 default = []
