--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,7 +24,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/winteler/sharesphere-builder:main
+      image: ghcr.io/winteler/sharesphere-builder:feature-wasm-bindgen-0-2-106
       env:
         LEPTOS_ENV: PROD
         LEPTOS_HASH_FILES: true
