--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,10 @@ lto = true
 codegen-units = 1
 
 [workspace.dependencies]
-leptos = { version = "0.8.12", features = ["nightly", "nonce"] }
+leptos = { version = "0.8.12", features = ["nightly", "nonce", "multipart"] }
 leptos_meta = { version = "0.8.5" }
 leptos_router = { version = "0.8.9", features = ["nightly"] }
 leptos_axum = { version = "0.8.6" }
-server_fn = { version = "0.8.8", features = ["multipart"] }
 
 leptos-fluent = { version = "0.2.19", features = ["json"] }
 leptos-use = { version = "0.16.3", features = ["signal_debounced", "signal_throttled", "storage", "use_breakpoints", "use_clipboard", "use_interval_fn", "use_permission", "use_web_notification"] }
