downgrade leptos to avoid error during hydration, update wasm-bindgen to 0.2.114

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,7 +24,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/winteler/sharesphere-builder:v0.0.4
+      image: ghcr.io/winteler/sharesphere-builder:v0.0.5-wasm-bindgen-0-2-114
       env:
         LEPTOS_ENV: PROD
         LEPTOS_HASH_FILES: true
